--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "graphql-request": "^3.4.0",
+    "mobx": "^6.1.7",
+    "mobx-react": "^7.1.0",
+    "mobx-state-tree": "^5.0.1",
+    "mst-gql": "^0.13.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
